# climaticui

./: .dockerignore  .env-example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  QWEN.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.qwen/: climaticui_spec.md  project_prompt.md  roadmap.md  steps.md
.streamlit/: config.toml
app/: main.py  styles.css
app/api/: __init__.py  analysis.py  auth.py  comparisons.py  dictionaries.py  forecasts.py  health.py  observations.py  reports.py  saved_sets.py
app/components/: __init__.py  auth_forms.py  charts.py  errors.py  filters.py  layout.py  maps.py  metrics_cards.py  navbar.py  sidebar.py  tables.py
app/pages/: 00_Dashboard.py  01_Analysis.py  02_Period_Comparison.py  03_Station_Comparison.py  04_Climatogram.py  05_Forecasting.py  06_Analysis_History.py  07_Reports.py  08_Correlation.py
app/reports/: __init__.py  figures.py  pdf.py  sections.py
app/sample/: client.py  data.py  storage.py
app/state/: session.py
app/utils/: formatters.py  validators.py
data/: climate_data_sample.csv  stations_coordinates.csv  users.csv
klimatika_frontend/: __init__.py  config.py
klimatika_frontend/api/: __init__.py  analysis.py  auth.py  client.py  comparisons.py  dictionaries.py  forecasts.py  health.py  reports.py  (+1 more)
pages/: 00_Dashboard.py  01_Analysis.py  01_Анализ.py  02_Period_Comparison.py  02_Сравнение_периодов.py  03_Station_Comparison.py  03_Сравнение_станций.py  04_Climatogram.py  04_Климатограмма.py  05_Forecasting.py  05_Прогнозирование.py  06_Analysis_History.py  06_История_анализов.py  07_Reports.py  07_Отчёты.py  0_Login.py  1_Dashboard.py  2_Map_View.py  3_Analytics.py  4_Forecast.py  5_Reports.py  Profile.py  Register.py
tests/: test_api_client.py  test_climatogram_charts.py  test_formatters.py  test_reports.py  test_sample_client.py  test_validators.py
utils/: __init__.py  auth.py  auth_check.py  auth_session.py  data_loader.py  session.py
(+18 files in other folders)
