[project]
name = "climaticui"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Rozhin",email = "rozhin_sasha@inbox.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "pandas (>=2.1.0,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
