[project]
name = "climaticui"
version = "0.1.0"
description = "Streamlit frontend client for Klimatika backend API"
authors = [
    {name = "Alexander Rozhin",email = "rozhin_sasha@inbox.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "pandas (>=2.1.0,<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "pydeck (>=0.9.1,<1.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
