[project]
name = "climaticui"
version = "0.1.0"
description = "Streamlit frontend client for Klimatika backend API"
authors = [
    {name = "Alexander Rozhin",email = "rozhin_sasha@inbox.ru"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "pandas (>=2.2.0,<2.3.0)",
    "numba (>=0.62.0,<1.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "pydeck (>=0.9.1,<1.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "reportlab (>=4.0.0,<5.0.0)",
    "kaleido (==0.2.1)",
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
